apps/dashboard/app/assets/stylesheets/application.scss
@import "variables";

@import "bootstrap/scss/bootstrap";

@import "custom";

// Import Markdown styling
@import "app_kit/markdown";

//TODO:
// overrides for navbar-default to get the same look and feel
// this way we could have 2 different navbars on the same app
// one that is styled darker and tiny (navbar-inverse) and one
// that is red:
// $navbar-default-bg:  rgb(200,16,46);
// $navbar-default-color: rgb(255, 255, 255);
// $navbar-default-link-color: rgb(255, 255, 255);
// $navbar-default-link-hover-color: rgb(255, 255, 255);
// $navbar-default-brand-hover-color: rgb(255, 255, 255);
// $navbar-default-link-active-color: rgb(255, 255, 255);

//TODO: consider this to be the default height to use on other pages
// then make the navbar larger on the main pages where the larger navbar doesn't
// get in the way
// $navbar-height: 20px;



* { // Contrast fixes. Do not edit without re-checking accessibility
  $bs-link-color: rgb(31, 110, 178);
  $bs-danger: rgb(218, 52, 67);
  $bs-secondary: rgb(107 117 128);
}

.bg-white {
  --bs-info: rgb(9, 128, 151);
  --bs-info-rgb: 9, 128, 151;
}

.badge {
  --bs-success: rgb(66, 130, 66);
  --bs-success-rgb: 66, 130, 66;
  --bs-info: rgb(9, 128, 151);
  --bs-info-rgb: 9, 128, 151;
}

nav.navbar {
  padding: 0.5rem 1rem;
}

// styles to make a logo fill the navbar height if using a logo for the navbar title
.navbar-brand.navbar-brand-logo {
  padding: 0px;
}

a.navbar-brand.navbar-brand-logo {
  display: inline-block;
  height: 2em;
  vertical-align: middle;
  max-width: 20em;
  overflow-x: hidden;

  img {
    height: 100%;
  }

  span {
    vertical-align: sub;
  }
}

// for inverse, lets make the text slightliy darker so its
// different than the links
.navbar.navbar-inverse .navbar-text {
  color: #ddd;
}

// Add colors
$ood-white: rgb(255, 255, 255);
$ood-red: rgb(200, 16, 46);
$ood-burgundy: rgb(120, 47, 64);
$ood-light-gray: rgb(151, 153, 155);
$ood-gray: rgb(83, 86, 90);
$ood-black: rgb(45, 51, 38);
$ood-blue: rgb(0, 95, 133);


// add font-awesome styles & fonts
@import "@fortawesome/fontawesome-free/scss/fontawesome";
@import '@fortawesome/fontawesome-free/scss/regular';
@import '@fortawesome/fontawesome-free/scss/solid';
@import '@fortawesome/fontawesome-free/scss/brands';
// TODO: upgrade to fontawesome 5!
@import '@fortawesome/fontawesome-free/scss/v4-shims';

// Load up dataTables bootstrap specific styles
@import "datatables.net-bs5/css/dataTables.bootstrap5";

// Use sticky footer in body of layout
// See: https://css-tricks.com/couple-takes-sticky-footer/

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;

  div.content {
    flex: 1 0 auto;
  }

  .footer {
    flex-shrink: 0;
  }
}

// Borrowed from bootstrap 4
.ood-mb-2 {
  margin-bottom: (1rem * .50) !important;
}

// Remove the well-styling from the bootstrap <pre>
pre.motd-monospaced {
  background-color: #FFFFFF;
  font-size: 14px;
  border: none;
  white-space: pre-wrap;
}

// Add branded panels

.sandbox-apps-header {
  background-color: $ood-burgundy;
  color: $ood-white;
  margin-bottom: 2rem;
}

.system-and-shared-apps-header {
  background-color: $ood-blue;
  color: $ood-white;
  margin-bottom: 2rem;
}

/**
@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max + 125) {
  @include responsive-invisibility('.hidden-sm-nav');
}

@media (min-width: $screen-md-min) and (max-width: $screen-md-max + 135) {
  @include responsive-invisibility('.hidden-md-nav');
}
**/

pre:not(#editor) {
  @extend .bg-light !optional;
  @extend .p-2;
  @extend .rounded;
}

// bootstrap_form creates <small class="form-text" for help text
// which is too small at 80% so we change it to be close to default
small.form-text {
   font-size: 96%;
}

// Adds bootstrap-like text-prewrap
.text-prewrap {
  white-space: pre-wrap;
}

.mw-150px {
  max-width: 150px;
}

// Add width classes for every whole percentage between 0 and 100
@for $i from 1 through 100 {
  .w-#{$i} {
    width: $i * 1%;
  }
}

// Your custom css styles below (must be manually added)

@import "active_jobs";
@import "dashboard";
@import "navbar";
@import "apps";
@import "products";
@import "batch_connect/sessions";
@import "batch_connect/session_contexts";
@import "batch_connect/saved_settings";
@import "insufficient_quota";
@import "insufficient_balance";
@import "fa_shims";
@import "breadcrumb";
@import "buttons";
@import "files";
@import "editor";
@import "icon_picker";
@import "pinned_apps";
@import "xdmod";
@import "support_ticket";
@import "data_tables";
@import "projects";
@import "workflows";
@import "scripts";
@import "common";
@import "module_browser";
@import "@uppy/core/dist/style";
@import "@uppy/dashboard/dist/style";

